# codewatch-token-optimizer

./: .gitignore  README.md  pyproject.toml
token_optimizer/: __init__.py  cli.py  history_manager.py  pruner.py  rules_generator.py  watcher.py
